# Biblicus

./: .coveragerc  .gitignore  .readthedocs.yaml  AGENTS.md  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CHANGELOG_STT_BENCHMARKING.md  MANIFEST.in  README.md  amplify.yml  behave.ini  coverage.json  pyproject.toml
.beads/: issues.jsonl
.github/: ISSUE_TEMPLATE.md
_demo_embedding_retrieval/: build.json  extract.json  ingest.out  init.out  query.json  wikitext_train.txt
configs/: baseline-ocr.yaml  docling-granite.yaml  docling-smol.yaml  heron-tesseract.yaml  layout-aware-tesseract.yaml  markitdown.yaml  ocr-paddleocr.yaml  ocr-rapidocr.yaml  unstructured.yaml
corpora/: README.md
docs/: ANALYSIS.md  ARCHITECTURE.md  ARCHITECTURE_DETAIL.md  BACKENDS.md  CHUNKING.md  CONTEXT_ENGINE.md  CONTEXT_ENGINE_DEMO.md  CONTEXT_PACK.md  CORPUS.md  CORPUS_DESIGN.md  CORPUS_WORKFLOWS.md  DEMOS.md  EMBEDDING_RETRIEVAL.md  EXTRACTION.md  EXTRACTION_EVALUATION.md  FEATURE_INDEX.md  KNOWLEDGE_BASE.md  MARKOV_ANALYSIS.md  NEXT_STEPS.md  PROFILING.md  PR_FAQ_CONTEXT_ENGINE.md  PR_FAQ_EMBEDDING_RETRIEVAL.md  PR_FAQ_TEXT_ANNOTATE.md  RETRIEVAL.md  RETRIEVAL_EVALUATION.md  RETRIEVAL_QUALITY.md  ROADMAP.md  STT.md  TESTING.md  TEXT_ANNOTATE.md  TEXT_EXTRACT.md  TEXT_LINK.md  TEXT_REDACT.md  TEXT_SLICE.md  TEXT_UTILITIES.md  TOPIC_MODELING.md  USER_CONFIGURATION.md  USE_CASES.md  UTILITIES.md  analysis.md  (+30 more)
examples/: biblicus.config.yml
features/: 70_context_retriever.feature  71_context_compaction.feature  72_context_history_compaction.feature  73_context_nested_compaction.feature  74_context_regeneration.feature  75_context_default_regeneration.feature  76_context_pack_budget_weights.feature  77_context_default_pack_priority.feature  78_context_default_pack_weights.feature  79_context_nested_context_packs.feature  80_context_nested_pack_budget_cap.feature  81_context_nested_regeneration.feature  82_context_explicit_regeneration.feature  83_context_explicit_pack_priority.feature  84_context_explicit_pack_weights.feature  85_context_expansion.feature  86_context_engine_errors.feature  87_context_compactor_strategies.feature  88_context_engine_model_validation.feature  89_context_engine_internal_branches.feature  90_embedding_index_evidence_fallback.feature  91_tf_vector_internal_branches.feature  93_context_engine_full_paths.feature  99_internal_coverage.feature  ai_llm.feature  ai_llm_unit.feature  ai_models.feature  amplify_publisher.feature  analysis_schema.feature  audio_format_converter.feature  backend_validation.feature  biblicus_corpus.feature  cli_entrypoint.feature  cli_parsing.feature  cli_step_spec_parsing.feature  (+116 more)
(+540 files in other folders)
